policies/backups/fixtures/pvc-backup-true-prod-pass.yaml
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: pvc-backup-true-prod-pass
  namespace: production
  labels:
    ism.latticework.systems/backup-required: "true"
spec:
  accessModes: [ReadWriteOnce]
  resources:
    requests:
      storage: 10Gi
